--- a/ab_testing_project_product_launch.ipynb
+++ b/ab_testing_project_product_launch.ipynb
@@ -867,6 +867,10 @@
     "id": "55a197b9-5671-490f-a39d-3ac8dea9328b"
    },
    "source": [
+    "A positive t-statistic suggests an increase in each customer's average revenue.\n",
+    "\n",
+    "P-value tells us the probability that we see a t-statistic at least as extreme as the observed one if there is really no difference. Since the p-value is lower than significance level (5%), the result is unlikely due to chance.\n",
+    "\n",
     "For treatment, the average revenue per customer increased much more than it did for control."
    ]
   },
@@ -935,7 +939,7 @@
    "source": [
     "## Summary of Packages and Functions Used\n",
     "\n",
-    "1. Data Manipulation using Pandas and Numpy\n",
+    "#### 1. Data Manipulation using Pandas and Numpy\n",
     " - describe() function to get the summary statistics including mean and standard deveation\n",
     " - concat() function to merge two datasets into a single dataset\n",
     " - apply (lambda) function to apply a function along an axis of the DataFrame\n",
@@ -947,12 +951,14 @@
     " - quantile() function to compute quantiles for a weighted sample\n",
     " \n",
     " \n",
-    "2. Data Visualization using Seaborn and Matplotlib\n",
+    " \n",
+    "#### 2. Data Visualization using Seaborn and Matplotlib\n",
     " - kdeplot() function to plot histogram\n",
     " - figure() function to edit the chart setting such as the size of the graph\n",
     " \n",
     " \n",
-    "3. Statistical Analysis using Statsmodels\n",
+    " \n",
+    "#### 3. Statistical Analysis using Statsmodels\n",
     " - ttest_ind() to perform an independent t-test to evaluate the statistical significance of the difference in the means \n",
     " - normaltest() to conduct normality test to check for violation of assumptions for t-test\n",
     " - tconfint_diff() to return confidence interval for the difference in means\n",
